[gd_scene load_steps=2 format=3 uid="uid://dhoq1owk7te21"]

[ext_resource type="Script" uid="uid://c1gydahaqy18p" path="res://login_ui.gd" id="1_abcde"]

[node name="LoginUI" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_abcde")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="NicknameInput" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "请输入昵称"

[node name="PasswordInput" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "请输入密码"
secret = true

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="LoginBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "登录"

[node name="RegisterBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "注册"
